--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USER=root
 DB_PASSWORD=root
-DB_HOST=localhost #if run dev (localhost), prod (postgres)
+DB_HOST=postgres #if run dev (localhost), prod (postgres)
 DB_PORT=5432
 DB_NAME=crmdb
