--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,17 @@ services:
     ports:
       - "8081:8080"
 
+  # Service untuk aplikasi Golang
+  app:
+    build: .
+    container_name: dedi_crm
+    env_file:
+      - .env
+    command: ["./dedi_crm", "--host=postgres", "--port=5432"]
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+
 volumes:
   postgres_data:
